Fix PHP 5.6 support
As the tightenco/collect gets updated tot 5.5 which requires PHP >= 7.0.0 it break php 5.6 support for valet. Which we need for legacy projects.

--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
         "mnapoli/silly": "~1.0",
         "symfony/process": "~2.7|~3.0",
         "nategood/httpful": "~0.2",
-        "tightenco/collect": "^5.3"
+        "tightenco/collect": "~5.4.33"
     },
     "require-dev": {
         "mockery/mockery": "0.9.*",
